Added Fancybox. Released modal: quick view, buy in one click, etc. Code refactoring.

--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -1,3 +1,4 @@
+	<!-- Section: Questions left? -->
 	<section class="f-questions section-blue">
 		<div class="container">
 			<h2 class="f-questions-title mb-16 text-lg w-bold text-center">Остались вопросы?</h2>
@@ -21,7 +22,8 @@
 			</form>
 		</div><!-- /.container -->
 	</section>
-	
+
+	<!-- Site footer -->
 	<footer class="footer">
 		<div class="footer-subscribe">
 			<div class="container">
@@ -137,7 +139,23 @@
 		</div>
 	</footer>
 
+	<!-- Go up button -->
+	<div class="go-up" id="go-up-button">
+		<button class="go-up-btn btn">
+			<span>Наверх</span>
+			<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+		</button>
+	</div>
+
 	<!--#include virtual="/parts/mobile-menu.html" -->
+
+	<!--#include virtual="/parts/modals/check-order-status.html" -->
+
+	<!--#include virtual="/parts/modals/free-advice.html" -->
+
+	<!--#include virtual="/parts/modals/buy-one-click.html" -->
+
+	<!--#include virtual="/parts/modals/quick-view-product.html" -->
 
 	<script src="js/app.min.js"></script>
 
