--- a/app/parts/mobile-menu.html
+++ b/app/parts/mobile-menu.html
@@ -150,11 +150,11 @@
 			</div><!-- /.mmenu-main-adress -->
 
 			<div class="mmenu-main-support">
-				<button class="btn btn-yellow">
+				<button type="button" class="btn btn-yellow" data-toggle="modal" data-target="#freeAdviceModal">
 					<svg class="icon icon-support"><use xlink:href="images/symbol-defs.svg#support"></use></svg>
 					<span>Бесплатная консультация</span>
 				</button>
-				<button class="btn btn-secondary">Что с моим заказом?</button>
+				<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#checkOrderStatusModal">Что с моим заказом?</button>
 			</div><!-- /.mmenu-main-support -->
 
 			<div class="mmenu-main-social">
