--- a/app/parts/home/trust.html
+++ b/app/parts/home/trust.html
@@ -37,42 +37,42 @@
 			<div class="h-trust-col">
 				<h2 class="h-trust-title mb-32 text-lg w-bold">Сертификаты</h2>
 				<div class="h-trust-certificates">
-					<a href="#" class="h-trust-certificates-item" data-fancybox="certificates">
+					<a href="images/dist/certificates/1.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
 							<img src="images/dist/certificates/1.jpg" alt="">
 						</div>
 					</a>
-					<a href="#" class="h-trust-certificates-item" data-fancybox="certificates">
+					<a href="images/dist/certificates/2.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
 							<img src="images/dist/certificates/2.jpg" alt="">
 						</div>
 					</a>
-					<a href="#" class="h-trust-certificates-item" data-fancybox="certificates">
+					<a href="images/dist/certificates/3.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
 							<img src="images/dist/certificates/3.jpg" alt="">
 						</div>
 					</a>
-					<a href="#" class="h-trust-certificates-item" data-fancybox="certificates">
+					<a href="images/dist/certificates/1.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
 							<img src="images/dist/certificates/1.jpg" alt="">
 						</div>
 					</a>
-					<a href="#" class="h-trust-certificates-item" data-fancybox="certificates">
+					<a href="images/dist/certificates/3.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
 							<img src="images/dist/certificates/3.jpg" alt="">
 						</div>
 					</a>
-					<a href="#" class="h-trust-certificates-item" data-fancybox="certificates">
+					<a href="images/dist/certificates/1.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
 							<img src="images/dist/certificates/1.jpg" alt="">
 						</div>
 					</a>
-					<a href="#" class="h-trust-certificates-item" data-fancybox="certificates">
+					<a href="images/dist/certificates/2.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
 							<img src="images/dist/certificates/2.jpg" alt="">
 						</div>
 					</a>
-					<a href="#" class="h-trust-certificates-item" data-fancybox="certificates">
+					<a href="images/dist/certificates/3.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
 							<img src="images/dist/certificates/3.jpg" alt="">
 						</div>
