--- a/app/parts/products-card/product-6.html
+++ b/app/parts/products-card/product-6.html
@@ -1,6 +1,6 @@
 <div class="card card-product">
 	<div class="card-quick-view">
-		<a href="#" class="btn btn-sm btn-secondary">Быстрый просмотр</a>
+		<button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#quickViewProductModal">Быстрый просмотр</button>
 	</div>
 	<div class="card-label card-label--gray">В архиве</div>
 	<a href="#" class="card-photo" title="Автоматика для откатных ворот">
@@ -28,10 +28,10 @@
 				<div class="before-added">В корзину</div>
 				<div class="after-added">
 					<svg class="icon icon-checked"><use xlink:href="images/symbol-defs.svg#checked"></use></svg>
-					<span>Товар добавлен в <a href="#">корзину</a></span>
+					<span>Товар добавлен<br> в <a href="#">корзину</a></span>
 				</div>
 			</button>
-			<button class="btn btn-sm btn-secondary btn-quick-buy">Купить в 1 клик</button>
+			<button class="btn btn-sm btn-secondary btn-quick-buy" data-toggle="modal" data-target="#buyOneClickModal">Купить в 1 клик</button>
 		</div>
 	</div>
 	<div class="card-attributes">
