--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -50,19 +50,19 @@
 					<div class="col-lg-2">
 						<div class="footer-intro">
 							<div class="logo">
-								<a href="#" rel="home">
+								<a href="index.html" rel="home">
 									<img src="images/logo-white.svg" alt="Автоматика для ворот 750">
 								</a>
 								<p class="descr text-xxs">Автоматика для ворот, системы контроля доступа, шлагбаумы, забор, навесы</p>
 							</div>
 							<div class="payments">
 								<div class="payments-title text-xxs">Мы принимаем</div>
-								<img src="images/dist/payments.png" alt="Мы принимаем платежи">
+								<img src="./images/dist/payments.png" alt="Мы принимаем платежи">
 							</div>
 							<div class="yandex-market">
 								<div class="yandex-market-title text-xxs">Оцените наш магазин<br> в Яндекс маркет</div>
 								<a href="#" target="_blank" rel="nofollow noopener">
-									<img src="images/dist/yandex-market-logo.svg" alt="Яндекс маркет">
+									<img src="./images/dist/yandex-market-logo.svg" alt="Яндекс маркет">
 								</a>
 							</div>
 						</div>
