--- a/app/parts/home/advantages.html
+++ b/app/parts/home/advantages.html
@@ -8,7 +8,7 @@
 			<div class="col-3">
 				<div class="h-advantages-item">
 					<figure class="picture">
-						<img src="images/dist/icons/advantages/wallet.svg" alt="Различные формы оплаты">
+						<img src="./images/dist/icons/advantages/wallet.svg" alt="Различные формы оплаты">
 						<div class="blur"></div>
 					</figure>
 					<h4 class="title text-sm w-medium">Различные формы оплаты</h4>
@@ -18,7 +18,7 @@
 			<div class="col-3">
 				<div class="h-advantages-item">
 					<figure class="picture">
-						<img src="images/dist/icons/advantages/shield-check.svg" alt="Гарантия качества">
+						<img src="./images/dist/icons/advantages/shield-check.svg" alt="Гарантия качества">
 						<div class="blur"></div>
 					</figure>
 					<h4 class="title text-sm w-medium">Гарантия качества</h4>
@@ -28,7 +28,7 @@
 			<div class="col-3">
 				<div class="h-advantages-item">
 					<figure class="picture">
-						<img src="images/dist/icons/advantages/coin.svg" alt="Цена">
+						<img src="./images/dist/icons/advantages/coin.svg" alt="Цена">
 						<div class="blur"></div>
 					</figure>
 					<h4 class="title text-sm w-medium">Цена</h4>
@@ -38,7 +38,7 @@
 			<div class="col-3">
 				<div class="h-advantages-item">
 					<figure class="picture">
-						<img src="images/dist/icons/advantages/delivery.svg" alt="Доставка">
+						<img src="./images/dist/icons/advantages/delivery.svg" alt="Доставка">
 						<div class="blur"></div>
 					</figure>
 					<h4 class="title text-sm w-medium">Доставка</h4>
