--- a/app/parts/home/articles.html
+++ b/app/parts/home/articles.html
@@ -11,7 +11,7 @@
 					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
-								<img src="images/dist/articles/1.jpg" alt="">
+								<img src="./images/dist/articles/1.jpg" alt="">
 							</div>
 							<div class="card-meta">
 								<h4 class="title text-sm w-medium">Где используется контроллер замка Perco</h4>
@@ -22,7 +22,7 @@
 					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
-								<img src="images/dist/articles/2.jpg" alt="">
+								<img src="./images/dist/articles/2.jpg" alt="">
 							</div>
 							<div class="card-meta">
 								<h4 class="title text-sm w-medium">Как выбрать автоматику для ворот</h4>
@@ -33,7 +33,7 @@
 					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
-								<img src="images/dist/articles/3.jpg" alt="">
+								<img src="./images/dist/articles/3.jpg" alt="">
 							</div>
 							<div class="card-meta">
 								<h4 class="title text-sm w-medium">Виды приводов для ворот</h4>
@@ -44,7 +44,7 @@
 					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
-								<img src="images/dist/articles/4.jpg" alt="">
+								<img src="./images/dist/articles/4.jpg" alt="">
 							</div>
 							<div class="card-meta">
 								<h4 class="title text-sm w-medium">Где используется контроллер замка Perco</h4>
@@ -62,7 +62,7 @@
 					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
-								<img src="images/dist/articles/2.jpg" alt="">
+								<img src="./images/dist/articles/2.jpg" alt="">
 							</div>
 							<div class="card-meta">
 								<h4 class="title text-sm w-medium">Как выбрать автоматику для ворот</h4>
@@ -73,7 +73,7 @@
 					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
-								<img src="images/dist/articles/4.jpg" alt="">
+								<img src="./images/dist/articles/4.jpg" alt="">
 							</div>
 							<div class="card-meta">
 								<h4 class="title text-sm w-medium">Где используется контроллер замка Perco</h4>
@@ -84,7 +84,7 @@
 					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
-								<img src="images/dist/articles/1.jpg" alt="">
+								<img src="./images/dist/articles/1.jpg" alt="">
 							</div>
 							<div class="card-meta">
 								<h4 class="title text-sm w-medium">Где используется контроллер замка Perco</h4>
@@ -95,7 +95,7 @@
 					<div class="col-lg-3">
 						<a href="#" class="card card-article">
 							<div class="card-photo img-cover">
-								<img src="images/dist/articles/3.jpg" alt="">
+								<img src="./images/dist/articles/3.jpg" alt="">
 							</div>
 							<div class="card-meta">
 								<h4 class="title text-sm w-medium">Виды приводов для ворот</h4>
