--- a/app/parts/home/heroes.html
+++ b/app/parts/home/heroes.html
@@ -7,17 +7,17 @@
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<div class="h-heroes-slider-photo img-cover">
-								<img src="images/dist/home-slider-photo-1.jpg" alt="">
+								<img src="./images/dist/home-slider-photo-1.jpg" alt="">
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
 							<div class="h-heroes-slider-photo img-cover">
-								<img src="images/dist/home-slider-photo-1.jpg" alt="">
+								<img src="./images/dist/home-slider-photo-1.jpg" alt="">
 							</div>
 						</div><!-- /.slide -->
 						<div class="swiper-slide">
 							<div class="h-heroes-slider-photo img-cover">
-								<img src="images/dist/home-slider-photo-1.jpg" alt="">
+								<img src="./images/dist/home-slider-photo-1.jpg" alt="">
 							</div>
 						</div><!-- /.slide -->
 					</div><!-- /.swiper-wrapper -->
@@ -38,7 +38,7 @@
 							<div class="product">
 								<h5 class="product-heading">Товар дня</h5>
 								<div class="product-photo img-scale">
-									<img src="images/dist/products/product-of-the-day.png" alt="">
+									<img src="./images/dist/products/product-of-the-day.png" alt="">
 								</div>
 								<div class="product-meta">
 									<span class="title">CAME ATI 5000A привод для распашных ворот до 1000 кг</span>
@@ -51,7 +51,7 @@
 							<div class="product">
 								<h5 class="product-heading">Товар дня</h5>
 								<div class="product-photo img-scale">
-									<img src="images/dist/products/product-of-the-day.png" alt="">
+									<img src="./images/dist/products/product-of-the-day.png" alt="">
 								</div>
 								<div class="product-meta">
 									<span class="title">CAME ATI 5000A привод для распашных ворот до 1000 кг</span>
