--- a/app/parts/mobile-menu.html
+++ b/app/parts/mobile-menu.html
@@ -160,9 +160,9 @@
 			<div class="mmenu-main-social">
 				<div class="mmenu-main-social-title text-xxs text-center">Мы в социальных сетях</div>
 				<ul class="mmenu-main-social-list">
-					<li><a href="#" target="_blank" rel="nofollow noopener"><img src="images/dist/icons/instagram.svg" alt=""></a></li>
-					<li><a href="#" target="_blank" rel="nofollow noopener"><img src="images/dist/icons/youtube.svg" alt=""></a></li>
-					<li><a href="#" target="_blank" rel="nofollow noopener"><img src="images/dist/icons/vk.svg" alt=""></a></li>
+					<li><a href="#" target="_blank" rel="nofollow noopener"><img src="./images/dist/icons/instagram.svg" alt=""></a></li>
+					<li><a href="#" target="_blank" rel="nofollow noopener"><img src="./images/dist/icons/youtube.svg" alt=""></a></li>
+					<li><a href="#" target="_blank" rel="nofollow noopener"><img src="./images/dist/icons/vk.svg" alt=""></a></li>
 				</ul>
 			</div><!-- /.mmenu-main-social -->
 
