--- a/app/parts/modals/buy-one-click.html
+++ b/app/parts/modals/buy-one-click.html
@@ -12,7 +12,7 @@
 				<form class="qb-product card card-product">
 					<div class="card-photo">
 						<div class="card-label card-label--yellow">−15%</div>
-						<img src="images/dist/products/1.png" alt="">
+						<img src="./images/dist/products/1.png" alt="">
 					</div>
 					<div class="card-meta">
 						<a href="#" class="permalink blue-link">CAME ATI 3000 COMBO CLASSICO (001U7088RU) комплект автоматики для распашных ворот до 800 кг</a>
