--- a/app/parts/modals/quick-view-product.html
+++ b/app/parts/modals/quick-view-product.html
@@ -70,27 +70,27 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<a href="images/dist/products/qv-photo-1.jpg" class="photo img-scale" data-fancybox="qv-product-gallery">
-													<img src="images/dist/products/qv-photo-1.jpg" alt="">
+													<img src="./images/dist/products/qv-photo-1.jpg" alt="">
 												</a>
 											</div><!-- /.slide -->
 											<div class="swiper-slide">
 												<a href="images/dist/products/qv-photo-2.jpg" class="photo img-scale" data-fancybox="qv-product-gallery">
-													<img src="images/dist/products/qv-photo-2.jpg" alt="">
+													<img src="./images/dist/products/qv-photo-2.jpg" alt="">
 												</a>
 											</div><!-- /.slide -->
 											<div class="swiper-slide">
 												<a href="images/dist/products/qv-photo-3.jpg" class="photo img-scale" data-fancybox="qv-product-gallery">
-													<img src="images/dist/products/qv-photo-3.jpg" alt="">
+													<img src="./images/dist/products/qv-photo-3.jpg" alt="">
 												</a>
 											</div><!-- /.slide -->
 											<div class="swiper-slide">
 												<a href="images/dist/products/qv-photo-4.jpg" class="photo img-scale" data-fancybox="qv-product-gallery">
-													<img src="images/dist/products/qv-photo-4.jpg" alt="">
+													<img src="./images/dist/products/qv-photo-4.jpg" alt="">
 												</a>
 											</div><!-- /.slide -->
 											<div class="swiper-slide">
 												<a href="images/dist/products/qv-photo-5.jpg" class="photo img-scale" data-fancybox="qv-product-gallery">
-													<img src="images/dist/products/qv-photo-5.jpg" alt="">
+													<img src="./images/dist/products/qv-photo-5.jpg" alt="">
 												</a>
 											</div><!-- /.slide -->
 										</div><!-- /.swiper-wrapper -->
@@ -111,27 +111,27 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="thumb img-scale">
-													<img src="images/dist/products/qv-photo-1.jpg" alt="">
+													<img src="./images/dist/products/qv-photo-1.jpg" alt="">
 												</div>
 											</div><!-- /.slide -->
 											<div class="swiper-slide">
 												<div class="thumb img-scale">
-													<img src="images/dist/products/qv-photo-2.jpg" alt="">
+													<img src="./images/dist/products/qv-photo-2.jpg" alt="">
 												</div>
 											</div><!-- /.slide -->
 											<div class="swiper-slide">
 												<div class="thumb img-scale">
-													<img src="images/dist/products/qv-photo-3.jpg" alt="">
+													<img src="./images/dist/products/qv-photo-3.jpg" alt="">
 												</div>
 											</div><!-- /.slide -->
 											<div class="swiper-slide">
 												<div class="thumb img-scale">
-													<img src="images/dist/products/qv-photo-4.jpg" alt="">
+													<img src="./images/dist/products/qv-photo-4.jpg" alt="">
 												</div>
 											</div><!-- /.slide -->
 											<div class="swiper-slide">
 												<div class="thumb img-scale">
-													<img src="images/dist/products/qv-photo-5.jpg" alt="">
+													<img src="./images/dist/products/qv-photo-5.jpg" alt="">
 												</div>
 											</div><!-- /.slide -->
 										</div><!-- /.swiper-wrapper -->
