--- a/app/parts/products-card/product-6.html
+++ b/app/parts/products-card/product-6.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="card-label card-label--gray">В архиве</div>
 	<a href="#" class="card-photo" title="Автоматика для откатных ворот">
-		<img class="lazy" src="images/dist/products/6.jpg" alt="">
+		<img class="lazy" src="./images/dist/products/6.jpg" alt="">
 		<div class="lazy-spin"></div>
 	</a>
 	<div class="card-body">
