--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<title><!--#echo var="title" --></title>
@@ -91,8 +91,8 @@
 							<li><a href="#">Контакты</a></li>
 						</ul>
 						<ul class="social-list">
-							<li><a href="#" target="_blank" rel="nofollow noopener"><img src="images/dist/icons/instagram.svg" alt=""></a></li>
-							<li><a href="#" target="_blank" rel="nofollow noopener"><img src="images/dist/icons/youtube.svg" alt=""></a></li>
+							<li><a href="#" target="_blank" rel="nofollow noopener"><img src="./images/dist/icons/instagram.svg" alt=""></a></li>
+							<li><a href="#" target="_blank" rel="nofollow noopener"><img src="./images/dist/icons/youtube.svg" alt=""></a></li>
 						</ul>
 					</div><!-- /.header-top-nav -->
 
@@ -111,7 +111,7 @@
 					</div>
 
 					<div class="col-auto header-middle-logo">
-						<a href="page-home.html" rel="home">
+						<a href="index.html" rel="home">
 							<img src="images/logo.svg" alt="Атоматика для ворот">
 						</a>
 					</div><!-- /.header-middle-logo -->
@@ -151,7 +151,7 @@
 										<li>
 											<a href="#">
 												<div class="photo img-cover">
-													<img src="images/dist/menu-categories/1.jpg" alt="">
+													<img src="./images/dist/menu-categories/1.jpg" alt="">
 												</div>
 												<div class="meta">
 													<span class="title">NICE RB400BDKCE комплект автоматики для откатных ворот до 400 кг</span>
@@ -165,7 +165,7 @@
 										<li>
 											<a href="#">
 												<div class="photo img-cover">
-													<img src="images/dist/menu-categories/1.jpg" alt="">
+													<img src="./images/dist/menu-categories/1.jpg" alt="">
 												</div>
 												<div class="meta">
 													<span class="title">NICE RB400BDKCE комплект автоматики для откатных ворот до 400 кг</span>
@@ -179,7 +179,7 @@
 										<li>
 											<a href="#">
 												<div class="photo img-cover">
-													<img src="images/dist/menu-categories/1.jpg" alt="">
+													<img src="./images/dist/menu-categories/1.jpg" alt="">
 												</div>
 												<div class="meta">
 													<span class="title">NICE RB400BDKCE комплект автоматики для откатных ворот до 400 кг</span>
@@ -243,7 +243,7 @@
 										<li class="products-list-item">
 											<a href="#" class="products-list-link">
 												<div class="photo img-cover">
-													<img src="images/dist/menu-categories/1.jpg" alt="">
+													<img src="./images/dist/menu-categories/1.jpg" alt="">
 												</div>
 												<div class="meta">
 													<span class="title">NICE RB400BDKCE комплект автоматики для откатных ворот до 400 кг</span>
@@ -259,7 +259,7 @@
 										<li class="products-list-item">
 											<a href="#" class="products-list-link">
 												<div class="photo img-cover">
-													<img src="images/dist/menu-categories/1.jpg" alt="">
+													<img src="./images/dist/menu-categories/1.jpg" alt="">
 												</div>
 												<div class="meta">
 													<span class="title">NICE RB400BDKCE комплект автоматики для откатных ворот до 400 кг</span>
@@ -294,7 +294,7 @@
 										<li class="products-list-item">
 											<a href="#" class="products-list-link">
 												<div class="photo img-cover">
-													<img src="images/dist/menu-categories/1.jpg" alt="">
+													<img src="./images/dist/menu-categories/1.jpg" alt="">
 												</div>
 												<span class="title">NICE RB400BDKCE комплект автоматики для откатных ворот до 400 кг</span>
 											</a>
@@ -595,7 +595,7 @@
 										<div class="megamenu-list">
 											<div class="megamenu-item">
 												<div class="image img-cover">
-													<img src="images/dist/menu-categories/1.jpg" alt="Автоматика для откатных ворот">
+													<img src="./images/dist/menu-categories/1.jpg" alt="Автоматика для откатных ворот">
 												</div>
 												<a href="#" class="category">Автоматика для откатных ворот</a>
 												<ul class="subcategories">
@@ -607,7 +607,7 @@
 												</ul>
 											</div><!-- /.megamenu-item-->
 											<div class="megamenu-item">
-												<img src="images/dist/menu-categories/1.jpg" class="image" alt="Автоматика для распашных ворот">
+												<img src="./images/dist/menu-categories/1.jpg" class="image" alt="Автоматика для распашных ворот">
 												<a href="#" class="category">Автоматика для распашных ворот</a>
 												<ul class="subcategories">
 													<li><a href="#">Комплекты</a></li>
