--- a/app/parts/home/trust.html
+++ b/app/parts/home/trust.html
@@ -6,31 +6,31 @@
 				<h2 class="h-trust-title mb-32 text-lg w-bold">Наши клиенты</h2>
 				<div class="h-trust-clients">
 					<div class="h-trust-clients-item img-scale">
-						<img src="images/dist/partners/1.jpg" alt="">
+						<img src="./images/dist/partners/1.jpg" alt="">
 					</div>
 					<div class="h-trust-clients-item img-scale">
-						<img src="images/dist/partners/2.jpg" alt="">
+						<img src="./images/dist/partners/2.jpg" alt="">
 					</div>
 					<div class="h-trust-clients-item img-scale">
-						<img src="images/dist/partners/3.jpg" alt="">
+						<img src="./images/dist/partners/3.jpg" alt="">
 					</div>
 					<div class="h-trust-clients-item img-scale">
-						<img src="images/dist/partners/4.jpg" alt="">
+						<img src="./images/dist/partners/4.jpg" alt="">
 					</div>
 					<div class="h-trust-clients-item img-scale">
-						<img src="images/dist/partners/5.jpg" alt="">
+						<img src="./images/dist/partners/5.jpg" alt="">
 					</div>
 					<div class="h-trust-clients-item img-scale">
-						<img src="images/dist/partners/6.jpg" alt="">
+						<img src="./images/dist/partners/6.jpg" alt="">
 					</div>
 					<div class="h-trust-clients-item img-scale">
-						<img src="images/dist/partners/7.jpg" alt="">
+						<img src="./images/dist/partners/7.jpg" alt="">
 					</div>
 					<div class="h-trust-clients-item img-scale">
-						<img src="images/dist/partners/8.jpg" alt="">
+						<img src="./images/dist/partners/8.jpg" alt="">
 					</div>
 					<div class="h-trust-clients-item img-scale">
-						<img src="images/dist/partners/9.jpg" alt="">
+						<img src="./images/dist/partners/9.jpg" alt="">
 					</div>
 				</div>
 			</div><!-- /.h-trust-col  -->
@@ -39,42 +39,42 @@
 				<div class="h-trust-certificates">
 					<a href="images/dist/certificates/1.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
-							<img src="images/dist/certificates/1.jpg" alt="">
+							<img src="./images/dist/certificates/1.jpg" alt="">
 						</div>
 					</a>
 					<a href="images/dist/certificates/2.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
-							<img src="images/dist/certificates/2.jpg" alt="">
+							<img src="./images/dist/certificates/2.jpg" alt="">
 						</div>
 					</a>
 					<a href="images/dist/certificates/3.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
-							<img src="images/dist/certificates/3.jpg" alt="">
+							<img src="./images/dist/certificates/3.jpg" alt="">
 						</div>
 					</a>
 					<a href="images/dist/certificates/1.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
-							<img src="images/dist/certificates/1.jpg" alt="">
+							<img src="./images/dist/certificates/1.jpg" alt="">
 						</div>
 					</a>
 					<a href="images/dist/certificates/3.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
-							<img src="images/dist/certificates/3.jpg" alt="">
+							<img src="./images/dist/certificates/3.jpg" alt="">
 						</div>
 					</a>
 					<a href="images/dist/certificates/1.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
-							<img src="images/dist/certificates/1.jpg" alt="">
+							<img src="./images/dist/certificates/1.jpg" alt="">
 						</div>
 					</a>
 					<a href="images/dist/certificates/2.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
-							<img src="images/dist/certificates/2.jpg" alt="">
+							<img src="./images/dist/certificates/2.jpg" alt="">
 						</div>
 					</a>
 					<a href="images/dist/certificates/3.jpg" class="h-trust-certificates-item" data-fancybox="certificates">
 						<div class="img-scale">
-							<img src="images/dist/certificates/3.jpg" alt="">
+							<img src="./images/dist/certificates/3.jpg" alt="">
 						</div>
 					</a>
 				</div>
