--- a/app/parts/products-card/product-1.html
+++ b/app/parts/products-card/product-1.html
@@ -6,27 +6,27 @@
 	<a href="#" class="card-gallery" title="Alutech RTO-1000MKIT автоматика для откатных ворот">
 		<div class="card-gallery-item _active">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/1.png" alt="">
+			<img class="lazy" src="./images/dist/products/1.png" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 		<div class="card-gallery-item">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/2.jpg" alt="">
+			<img class="lazy" src="./images/dist/products/2.jpg" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 		<div class="card-gallery-item">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/3.jpg" alt="">
+			<img class="lazy" src="./images/dist/products/3.jpg" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 		<div class="card-gallery-item">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/4.jpg" alt="">
+			<img class="lazy" src="./images/dist/products/4.jpg" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 		<div class="card-gallery-item">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/5.jpg" alt="">
+			<img class="lazy" src="./images/dist/products/5.jpg" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 	</a>
