--- a/app/parts/products-card/product-2.html
+++ b/app/parts/products-card/product-2.html
@@ -6,22 +6,22 @@
 	<a href="#" class="card-gallery" title="AN-Motors ASL500KIT FULL комплект автоматики для откатных ворот">
 		<div class="card-gallery-item _active">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/2.jpg" alt="">
+			<img class="lazy" src="./images/dist/products/2.jpg" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 		<div class="card-gallery-item">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/3.jpg" alt="">
+			<img class="lazy" src="./images/dist/products/3.jpg" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 		<div class="card-gallery-item">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/4.jpg" alt="">
+			<img class="lazy" src="./images/dist/products/4.jpg" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 		<div class="card-gallery-item">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/5.jpg" alt="">
+			<img class="lazy" src="./images/dist/products/5.jpg" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 	</a>
