--- a/app/parts/products-card/product-3.html
+++ b/app/parts/products-card/product-3.html
@@ -6,12 +6,12 @@
 	<a href="#" class="card-gallery" title="Привод для распашных ворот линейный до 800 кг">
 		<div class="card-gallery-item _active">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/3.jpg" alt="">
+			<img class="lazy" src="./images/dist/products/3.jpg" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 		<div class="card-gallery-item">
 			<span class="card-gallery-item-nav"></span>
-			<img class="lazy" src="images/dist/products/4.jpg" alt="">
+			<img class="lazy" src="./images/dist/products/4.jpg" alt="">
 			<div class="lazy-spin"></div>
 		</div>
 	</a>
