Shop -sub/category pages. Shop filters.

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,8 @@
 					<h3 class="mb-20 text-md">Страницы магазина</h3>
 					<ol class="pages-list">
 						<li><a href="page-shop-catalog.html">Каталог</a></li>
+						<li><a href="page-shop-category.html">Категория</a></li>
+						<li><a href="page-shop-subcategory.html">Подкатегория</a></li>
 					</ol>
 				</div>
 			</div>
