--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -108,7 +108,7 @@
 						<button class="toggle-mmenu-btn">
 							<svg class="icon icon-bars"><use xlink:href="images/symbol-defs.svg#bars"></use></svg>
 						</button>
-					</div>
+					</div><!-- /.header-middle-burger -->
 
 					<div class="col-auto header-middle-logo">
 						<a href="index.html" rel="home">
