--- a/app/parts/products-card/product-5.html
+++ b/app/parts/products-card/product-5.html
@@ -2,7 +2,7 @@
 	<div class="card-quick-view">
 		<button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#quickViewProductModal">Быстрый просмотр</button>
 	</div>
-	<div class="card-label card-label--yellow">Распродажа</div>
+	<div class="card-label card-label--orange">Лидер продаж</div>
 	<a href="#" class="card-gallery" title="CAME KRONO COMBO CLASSICO автоматика для распашных ворот">
 		<div class="card-gallery-item _active">
 			<span class="card-gallery-item-nav"></span>
