--- a/app/page-shop-catalog.html
+++ b/app/page-shop-catalog.html
@@ -22,8 +22,8 @@
 				<div class="section-heading mb-32">
 					<h1 class="title">Каталог</h1>
 				</div>
-				<div class="row row-items-40">
-					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+				<div class="row row-items-40 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
+					<div class="col">
 						<div class="shop-catalog-item">
 							<div class="photo img-cover mb-24 rounded-8">
 								<img src="images/dist/catalog/category-1.jpg" alt="">
@@ -43,7 +43,7 @@
 							</ul>
 						</div>
 					</div><!-- /.col -->
-					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+					<div class="col">
 						<div class="shop-catalog-item">
 							<div class="photo img-cover mb-24 rounded-8">
 								<img src="images/dist/catalog/category-2.jpg" alt="">
@@ -58,7 +58,7 @@
 							</ul>
 						</div>
 					</div><!-- /.col -->
-					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+					<div class="col">
 						<div class="shop-catalog-item">
 							<div class="photo img-cover mb-24 rounded-8">
 								<img src="images/dist/catalog/category-3.jpg" alt="">
@@ -74,7 +74,7 @@
 							</ul>
 						</div>
 					</div><!-- /.col -->
-					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+					<div class="col">
 						<div class="shop-catalog-item">
 							<div class="photo img-cover mb-24 rounded-8">
 								<img src="images/dist/catalog/category-4.jpg" alt="">
@@ -247,101 +247,48 @@
 		</section>
 
 		<!-- Products -->
-		<div class="shop-products">
+		<div class="shop-products mt-48">
 			<div class="container">
 
 				<!-- Shop settings -->
-				<div class="shop-settings">
-					<div class="shop-settings-wrapper">
-						<div class="shop-settings-row">
-							<div class="s-sort">
-								<span class="s-sort-label">Сортировки:</span>
-								<div class="s-sort-list">
-									<a rel="nofollow" href="#" class="_active">Популярные</a>
-									<a rel="nofollow" href="#">Дешевые</a>
-									<a rel="nofollow" href="#">Дорогие</a>
-									<a rel="nofollow" href="#">По отзывам</a>
-									<a rel="nofollow" href="#">Рейтингу</a>
-									<a rel="nofollow" href="#">Скидки</a>
-									<a rel="nofollow" href="#">Новинки</a>
-								</div>
-							</div><!-- /.s-sort -->
-							<div class="s-sort-dropdown dropdown">
-								<button type="button" class="s-sort-dropdown-btn btn btn-dropdown" id="dropdownSortProducts" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Сортировки</button>
-								<div class="s-sort-dropdown-menu dropdown-menu" aria-labelledby="dropdownSortProducts">
-									<a rel="nofollow" href="#">Популярные</a>
-									<a rel="nofollow" href="#">Дешевые</a>
-									<a rel="nofollow" href="#" class="_active">Дорогие</a>
-									<a rel="nofollow" href="#">По отзывам</a>
-									<a rel="nofollow" href="#">Рейтингу</a>
-									<a rel="nofollow" href="#">Скидки</a>
-									<a rel="nofollow" href="#">Новинки</a>
-								</div>
-							</div><!-- /.s-sort-dropdown -->
-							<div class="s-view">
-								<div class="s-view-buttons">
-									<a rel="nofollow" href="#" class="s-view-button btn _selected">
-										<svg class="icon icon-view-more"><use xlink:href="./images/symbol-defs.svg#view-grid"></use></svg>
-									</a>
-									<a rel="nofollow" href="#" class="s-view-button btn">
-										<svg class="icon icon-view-row"><use xlink:href="./images/symbol-defs.svg#view-row"></use></svg>
-									</a>
-								</div>
-							</div><!-- /.s-view -->
-						</div><!-- /.shop-settings-row -->
-						<div class="shop-settings-row">
-							<div class="s-found">
-								<span class="s-found-label text-xxs">Найдено:</span>
-								<span class="s-found-value text-xxs w-bold">576 товара</span>
-							</div><!-- /.s-found -->
-							<div class="s-show">
-								<span class="s-show-label text-xxs">Показывать:</span>
-								<div class="s-show-list">
-									<a rel="nofollow" href="#" class="s-show-item _selected">20</a>
-									<a rel="nofollow" href="#" class="s-show-item">40</a>
-									<a rel="nofollow" href="#" class="s-show-item">100</a>
-								</div>
-							</div><!-- /.s-show -->
-						</div><!-- /.shop-settings-row -->
-					</div><!-- /.shop-settings-wrapper -->
-				</div>
+				<!--#include virtual="/parts/shop/shop-settings.html" -->
 
 				<!-- List of products -->
-				<div class="row row-items-40">
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+				<div class="row row-items-40 row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-xl-6">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-1.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-2.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-3.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-4.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-5.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-6.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-1.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-2.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-3.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-4.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-5.html" -->
 					</div><!-- /.col -->
-					<div class="col-6 col-sm-4 col-6 col-sm-4 col-md-3 col-xl-2">
+					<div class="col">
 						<!--#include virtual="/parts/products-card/product-6.html" -->
 					</div><!-- /.col -->
 				</div><!-- /.row -->
