Search results page. Wishlist & Compare pages. Code refactoring.

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
 					<h3 class="mb-20 text-md">Общие страницы</h3>
 					<ol class="pages-list">
 						<li><a href="page-home.html">Главная страница</a></li>
+						<li><a href="page-search.html">Результаты поиска</a></li>
 					</ol>
 				</div>
 				<div class="col-sm-6">
@@ -65,6 +66,8 @@
 						<li><a href="page-shop-catalog.html">Каталог</a></li>
 						<li><a href="page-shop-category.html">Категория</a></li>
 						<li><a href="page-shop-subcategory.html">Подкатегория</a></li>
+						<li><a href="page-shop-wishlist.html">Избранные товары</a></li>
+						<li><a href="page-shop-compare.html">Сравнение товаров</a></li>
 					</ol>
 				</div>
 			</div>
