--- a/app/page-shop-catalog.html
+++ b/app/page-shop-catalog.html
@@ -236,7 +236,7 @@
 						</div><!-- /.col -->
 					</div><!-- /.row -->
 
-					<!-- Show all button -->
+					<!-- Show more button -->
 					<div class="mt-8">
 						<button type="button" class="btn btn-secondary w-100">Показать все</button>
 					</div>
@@ -246,8 +246,10 @@
 			</div><!-- /.container -->
 		</section>
 
+		<div class="mt-48"></div>
+
 		<!-- Products -->
-		<div class="shop-products mt-48">
+		<div class="shop-products">
 			<div class="container">
 
 				<!-- Shop settings -->
@@ -293,7 +295,7 @@
 					</div><!-- /.col -->
 				</div><!-- /.row -->
 
-				<!-- Show all button -->
+				<!-- Show more button -->
 				<div class="mb-32">
 					<button type="button" class="btn btn-secondary w-100">Показать ещё</button>
 				</div>
