--- a/app/page-shop-category.html
+++ b/app/page-shop-category.html
@@ -173,7 +173,7 @@
 							</div><!-- /.col -->
 						</div><!-- /.row -->
 
-						<!-- Show all button -->
+						<!-- Show more button -->
 						<div class="mb-32">
 							<button type="button" class="btn btn-secondary w-100">Показать ещё</button>
 						</div>
