--- a/app/page-shop-subcategory.html
+++ b/app/page-shop-subcategory.html
@@ -1,4 +1,4 @@
-<!--#set var="title" value="Категория товара" -->
+<!--#set var="title" value="Подкатегория товара" -->
 <!--#include virtual="/parts/header.html" -->
 
 <main class="page-main">
@@ -174,7 +174,7 @@
 							</div><!-- /.col -->
 						</div><!-- /.row -->
 
-						<!-- Show all button -->
+						<!-- Show more button -->
 						<div class="mb-32">
 							<button type="button" class="btn btn-secondary w-100">Показать ещё</button>
 						</div>
