Cart/Checkout (part 1 of 2). Code refactoring.

--- a/app/page-shop-compare.html
+++ b/app/page-shop-compare.html
@@ -20,13 +20,13 @@
 				<h1 class="title">Сравнение товаров</h1>
 			</div>
 
+			<!-- Compare empty -->
+			<!-- <div class="shop-message shop-message--yellow">
+				<p>Нет товаров для сравнения. Вы можете добавить товары в сравнение со страницы каталога или карточек товаров.</p>
+			</div> -->
+
 			<!-- Compare -->
 			<div class="compare">
-
-				<!-- Compare empty -->
-				<!-- <div class="shop-message">
-					<p>Нет товаров для сравнения. Вы можете добавить товары в сравнение со страницы каталога или карточек товаров.</p>
-				</div> -->
 
 				<!-- Compare main -->
 				<div class="compare-main">
