--- a/app/page-shop-wishlist.html
+++ b/app/page-shop-wishlist.html
@@ -20,6 +20,11 @@
 				<h1 class="title">Избранное</h1>
 			</div>
 
+			<!-- Wishlist empty -->
+			<!-- <div class="shop-message shop-message--yellow">
+				<p>Нет товаров в избранном. Вы можете добавить товары в избранное со страницы каталога или карточек товаров.</p>
+			</div> -->
+
 			<!-- Wishlist -->
 			<div class="wishlist">
 
