--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
 						<li><a href="page-shop-subcategory.html">Подкатегория</a></li>
 						<li><a href="page-shop-wishlist.html">Избранные товары</a></li>
 						<li><a href="page-shop-compare.html">Сравнение товаров</a></li>
+						<li><a href="page-shop-cart.html">Корзина</a></li>
 					</ol>
 				</div>
 			</div>
